[package]
name = "calendar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.24"
dotenvy = "0.15.7"
libsql-client = "0.26.1"
tokio = { version = "1.28.2", features = ["full"] }
uuid = { version = "1.3.3", features = ["v4"] }
